<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/movieDetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_details"
        android:background="@color/yellow_medium"
        android:textColor="@color/blue_strong"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/movie_id_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieActorsLabel"
        android:layout_width="240dp"
        android:layout_height="191dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/movieDirector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieActors"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_director"
        android:background="@color/yellow_medium"
        android:textColor="@color/blue_strong"
        app:layout_constraintBottom_toTopOf="@+id/movieDirectorLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieActorsLabel"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieActors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_actors_show"
        android:background="@color/yellow_medium"
        android:textColor="@color/blue_strong"
        app:layout_constraintBottom_toTopOf="@+id/movieActorsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDescriptionLabel"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_description"
        android:background="@color/yellow_medium"
        android:textColor="@color/blue_strong"
        app:layout_constraintBottom_toTopOf="@+id/movieDescriptionLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitleLabel"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movie_id_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_id"
        android:background="@color/yellow_medium"
        android:textColor="@color/blue_strong"
        app:layout_constraintBottom_toTopOf="@+id/movieIdLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailsTextView"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:background="@color/yellow_medium"
        android:textColor="@color/blue_strong"
        app:layout_constraintBottom_toTopOf="@+id/movieTitleLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieIdLabel"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieDirectorLabel"
        android:layout_width="315dp"
        android:layout_height="23dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDirector"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieIdLabel"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/movieTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_id_"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieTitleLabel"
        android:layout_width="266dp"
        android:layout_height="23dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/movieDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieDescriptionLabel"
        android:layout_width="288dp"
        android:layout_height="41dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/movieActors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDescription"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>