<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="24dp"
        android:background="@color/yellow_medium"
        android:text="@string/movie_title"
        app:layout_constraintBottom_toTopOf="@+id/movieTitleLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/yellow_medium"
        android:text="@string/movie_description"
        app:layout_constraintBottom_toTopOf="@+id/movieDescriptionLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitleLabel"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/movieDescriptionLabel"
        android:layout_width="331dp"
        android:layout_height="39dp"
        android:background="@color/yellow_medium"
        app:layout_constraintBottom_toTopOf="@+id/movieDirector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDescription"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/yellow_medium"
        android:text="@string/movie_director"
        app:layout_constraintBottom_toTopOf="@+id/movieDirectorLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDescriptionLabel"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/movieDirectorLabel"
        android:layout_width="324dp"
        android:layout_height="46dp"
        android:background="@color/yellow_medium"
        app:layout_constraintBottom_toTopOf="@+id/movieActors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDirector"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieActors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/movie_actors"
        android:background="@color/yellow_medium"
        app:layout_constraintBottom_toTopOf="@+id/movieActorsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDirectorLabel"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/movieActorsLabel"
        android:layout_width="337dp"
        android:layout_height="44dp"
        android:background="@color/yellow_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieActors"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/movieTitleLabel"
        android:layout_width="292dp"
        android:layout_height="46dp"
        android:background="@color/yellow_medium"
        app:layout_constraintBottom_toTopOf="@+id/movieDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>